Fixed double borders to display properly

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
-/*Base Styles*/
-@import url('https://fonts.googleapis.com/css?family=Cutive|Scheherazade');
-
 /*Layout*/
+
+@import url('https://fonts.googleapis.com/css?family=Cutive|Scheherazade');
 
 * {
   box-sizing: border-box;
@@ -13,46 +12,272 @@ body {
   display: flex;
   flex-direction: column;
   margin: auto;
+  background-color: #e0c9c9;
 }
-
- .sub-title,
-.contact-info, .newsletter {
-  margin-left: 1em;
-  margin-right: 1em;
-}
-
 
 header {
+  display: flex;
+  flex-direction: column;
   font-family: 'Scheherazade', serif;
-  background-color: #FFF;
+  background-color: #e0c9c9;
   text-align: center;
 }
 
-.title-card {
+header .sub-title-banner, main {
+  align-self: center;
+}
+
+.title-banner h4 {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.sub-title-banner {
+  margin: 0.8em 1rem 0.1em 1rem;
+  font-size: 1.3em;
+  max-width: 600px;
+}
+
+.sub-title-banner p, .newsletter p {
+  line-height: 1em;
+}
+
+.sub-title-banner p, footer p {
+  color: #FFF;
+}
+
+.sub-title-banner p {
+  margin-bottom: 1em;
+}
+
+.contact-info, .newsletter {
+  max-width: 600px;
+}
+
+.title-banner {
   font-family: 'Cutive', serif;
   color: #FFF;
   background-color: #2D3945;
 }
 
-.sub-title {
+select {
+  color: #A4A9AE;
+}
+
+main {
+  max-width: 600px;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+.border-top {
+  display: block;
   border-bottom: medium solid black;
-  font-size: 1.3em;
+  width: 100%;
+  margin-bottom: 0.2em;
+}
+
+.border-bottom {
+  display: block;
+  border-top: thin solid black;
+  width: 100%;
+  margin-bottom: 1em;
+}
+
+fieldset {
+  border: none;
+  margin: -0.4em -0.7em 0 -0.7em;
+}
+
+legend {
+  width: 100%;
+  margin: auto;
+}
+
+.title-1 {
+  padding-top: 1em;
+  width:inherit;
+}
+
+input {
+  border:none;
+}
+
+.contact-labels:first-of-type {
+  margin-top: 0.5em;
+}
+
+.contact-labels {
+  display: block;
 }
 
 .contact-info, .newsletter {
   margin-top: 0.2em;
-  padding-top: 1em;
-  border-top: thin solid black;
+  margin-bottom: 1em;
   font-family: 'Scheherazade', serif;
   font-size: 1.3em;
-  display: flex;
-  flex-direction: column;
+}
+
+::-webkit-input-placeholder {
+  font-family: 'Cutive', serif;
+  font-size: 0.75em;
+  text-align:right;
+  padding-right: 1em;
+  font-style: italic;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+  font-family: 'Cutive', serif;
+  font-size: 0.7em;
+  text-align:right;
+  padding-right: 1em;
+  font-style: italic;
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+  font-family: 'Cutive', serif;
+  font-size: 0.7em;
+  text-align:right;
+  padding-right: 1em;
+  font-style: italic;
+}
+
+:-ms-input-placeholder {
+  font-family: 'Cutive', serif;
+  font-size: 0.7em;
+  text-align:right;
+  padding-right: 1em;
+  font-style: italic;
+}
+
+select {
+  font-family: 'Cutive', serif;
+  padding-left: 1em;
+}
+
+ option {
+  font-family: 'Cutive', serif;
+  font-size: 0.7em;
+  text-align: left;
+  padding-left: 1em;
+}
+
+.text, select, textarea {
+  font-family: 'Cutive', serif;
+  background-color: #EFF0F1;
+  border-radius: 5px;
+  width: 100%;
+  padding-left: 1em;
+  border: medium solid transparent;
+  transition: all .5s;
+}
+
+.text, textarea, select, option {
+  height: 3em;
+  margin-bottom: 0.5em;
+}
+
+.zip {
+  width: 50%;
+}
+
+.text:focus, textarea:focus {
+  outline: none;
+  border: medium solid black;
+  background-color: #ADDFDC;
+}
+
+select:focus {
+  outline: none;
+  border: medium solid black;
+}
+
+.title-2 {
+  border-top: medium solid black;
+  padding: 1em 0 0 0;
 }
 
 .newsletter {
+  margin: 0.5em 0 0.5em 0;
+}
 
+.news-labels {
+  display: inline-block;
+  text-align: right;
+}
+
+.newsletter-group {
+  margin: 0.5em 0 0.5em 0;
+}
+
+.other-group {
+  margin: 0.5em 0 0.5em 0;
+}
+
+.textarea {
+  margin: 0.5em 0 1em 0;
+  height: 100px;
+}
+
+button {
+  font-family: 'Cutive', serif;
+  border:none;
+  color: #FFF;
+  background-color: #4EBBB5;
+  border-radius: 5px;
+  height: 50px;
+  width: 100%;
 }
 
 footer {
   text-align: center;
+  font-style: italic;
+}
+
+/*Media Queries*/
+
+@media (min-width: 459px) {
+
+  .sub-title-banner {
+    width: 93.028%;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .sub-title-banner h3 {
+    font-size: 1.6em;
+  }
+
+  .sub-title-banner p {
+    margin: 0em 0 1.8em 0;
+  }
+
+  .contact-info {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .contact-info h3 {
+    width: 100%;
+  }
+
+  .contact-labels {
+    display: inline-flex;
+    width: 40%;
+    margin: 0.5em 0 0.5em 0;
+  }
+
+  .text, select {
+    display: inline-flex;
+    width: 60%;
+    margin: 0.5em 0 0.5em 0;
+  }
+
+  .zip {
+    width: 25%;
+    margin-right: 35%;
+  }
+
+
 }
